Correctly respond to pref changed notifications when dpi pref is set to 0 or -1 (special values).  Fixes blank window after unconfirmed profile automigration.  b=87843  r=attinasi  sr=brendan